# custos

./: .envrc  .gitignore  .rustfmt.toml  Cargo.toml  config.toml.example  flake.nix  policy.toml.example
.github/workflows/: build.yaml
doc/: README.md
docs/: README.md
nix/: module.nix  shell.nix
nix/tests/: custos.nix
src/: config.rs  control.rs  daemon.rs  device.rs  error.rs  main.rs  policy.rs  signal.rs  sysfs.rs  uevent.rs
src/daemon/: activity.rs  changes.rs  control_server.rs  state.rs  tests.rs
