[package]
name = "custos"
version = "0.1.0"
edition = "2024"
description = "A sleek USB authorization daemon"
license = "AGPL-3.0-or-later"

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
nix = { version = "0.31", features = ["poll", "signal", "socket"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
toml = "1.1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3"

[lints.clippy]
complexity = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }

absolute_paths = "allow"
arbitrary_source_item_ordering = "allow"
enum_variant_names = "allow"
implicit_return = "allow"
missing_docs_in_private_items = "allow"
non_ascii_literal = "allow"
panic = "deny"
pattern_type_mismatch = "allow"
print_stdout = "allow"
question_mark_used = "allow"
similar_names = "allow"
single_call_fn = "allow"
std_instead_of_core = "allow"
too_long_first_doc_paragraph = "allow"
too_many_lines = "allow"
unused_trait_names = "allow"
unwrap_used = "deny"

expect_used = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
